--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Студия - goit-markup-hw-04</title>
+    <title>Студия - goit-markup-hw-05</title>
     <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -118,26 +118,35 @@
         <section class="work-section">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work-content">
-            <li>
-              <img
-                src="./images/working01.jpg"
-                alt="Чем мы занимаемся"
-                width="370"
-              />
+            <li class="work-item">
+              <div class="work-thumb">
+                <img
+                  src="./images/working01.jpg"
+                  alt="Чем мы занимаемся"
+                  width="370"
+                />
+                <p class="work-description">Десктопные приложения</p>
+              </div>
             </li>
-            <li>
-              <img
-                src="./images/working02.jpg"
-                alt="Чем мы занимаемся"
-                width="370"
-              />
+            <li class="work-item">
+              <div class="work-thumb">
+                <img
+                  src="./images/working02.jpg"
+                  alt="Чем мы занимаемся"
+                  width="370"
+                />
+                <p class="work-description">Мобильные приложения</p>
+              </div>
             </li>
-            <li>
-              <img
-                src="./images/working03.jpg"
-                alt="Чем мы занимаемся"
-                width="370"
-              />
+            <li class="work-item">
+              <div class="work-thumb">
+                <img
+                  src="./images/working03.jpg"
+                  alt="Чем мы занимаемся"
+                  width="370"
+                />
+                <p class="work-description">Дизайнерские решения</p>
+              </div>
             </li>
           </ul>
         </section>
