modal start after vebinar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a class="nav-link" href="./contacts.html">Контакты</a></li>
           </ul>
         </nav>
+        <button class="button" data-toggle-online-sign>онлайн запись</button>
         <ul class="contacts-header">
           <li>
             <a
@@ -443,5 +444,12 @@
         >
       </div>
     </footer>
+    <div data-backdrop-sign class="backdrop-sign">
+      <div class="modal-sign">
+        <button data-toggle-backdrop-sign>Закрыть</button>
+      </div>
+    </div>
+
+    <script src="./script/modal.js"></script>
   </body>
 </html>
