fix arter submitting revision

--- a/index.html
+++ b/index.html
@@ -122,31 +122,19 @@
           <ul class="work-content">
             <li class="work-item">
               <div class="work-thumb">
-                <img
-                  src="./images/working01.jpg"
-                  alt="Чем мы занимаемся"
-                  width="370"
-                />
+                <img src="./images/working01.jpg" alt="Чем мы занимаемся" />
                 <p class="work-description">Десктопные приложения</p>
               </div>
             </li>
             <li class="work-item">
               <div class="work-thumb">
-                <img
-                  src="./images/working02.jpg"
-                  alt="Чем мы занимаемся"
-                  width="370"
-                />
+                <img src="./images/working02.jpg" alt="Чем мы занимаемся" />
                 <p class="work-description">Мобильные приложения</p>
               </div>
             </li>
             <li class="work-item">
               <div class="work-thumb">
-                <img
-                  src="./images/working03.jpg"
-                  alt="Чем мы занимаемся"
-                  width="370"
-                />
+                <img src="./images/working03.jpg" alt="Чем мы занимаемся" />
                 <p class="work-description">Дизайнерские решения</p>
               </div>
             </li>
@@ -155,184 +143,178 @@
       </div>
       <!--/* Наша команда */-->
       <section class="team-section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team-set">
-          <li class="team-item">
-            <div class="team-thumb">
-              <img
-                src="./images/member01.jpg"
-                alt="Product Designer"
-                width="270"
-              />
-            </div>
-            <div class="team-content">
-              <h3 class="team-member">Игорь Демьяненк</h3>
-              <p class="team-profession">Product Designer</p>
-              <ul class="social">
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use href="./images/svg/sprite.svg#main-ig-icon"></use>
-                    </svg>
-                  </button>
-                </li>
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use
-                        href="./images/svg/sprite.svg#main-twitter-icon"
-                      ></use>
-                    </svg>
-                  </button>
-                </li>
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use href="./images/svg/sprite.svg#main-fb-icon"></use>
-                    </svg>
-                  </button>
-                </li>
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use href="./images/svg/sprite.svg#main-in-icon"></use>
-                    </svg>
-                  </button>
-                </li>
-              </ul>
-            </div>
-          </li>
+        <div class="container team">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team-set">
+            <li class="team-item">
+              <div class="team-thumb">
+                <img src="./images/member01.jpg" alt="Product Designer" />
+              </div>
+              <div class="team-content">
+                <h3 class="team-member">Игорь Демьяненк</h3>
+                <p class="team-profession">Product Designer</p>
+                <ul class="social">
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use href="./images/svg/sprite.svg#main-ig-icon"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use
+                          href="./images/svg/sprite.svg#main-twitter-icon"
+                        ></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use href="./images/svg/sprite.svg#main-fb-icon"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use href="./images/svg/sprite.svg#main-in-icon"></use>
+                      </svg>
+                    </button>
+                  </li>
+                </ul>
+              </div>
+            </li>
 
-          <li class="team-item">
-            <div class="team-thumb">
-              <img
-                src="./images/member02.jpg"
-                alt="Frontend Developer"
-                width="270"
-              />
-            </div>
-            <div class="team-content">
-              <h3 class="team-member">Ольга Репина</h3>
-              <p class="team-profession">Frontend Developer</p>
-              <ul class="social">
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use href="./images/svg/sprite.svg#main-ig-icon"></use>
-                    </svg>
-                  </button>
-                </li>
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use
-                        href="./images/svg/sprite.svg#main-twitter-icon"
-                      ></use>
-                    </svg>
-                  </button>
-                </li>
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use href="./images/svg/sprite.svg#main-fb-icon"></use>
-                    </svg>
-                  </button>
-                </li>
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use href="./images/svg/sprite.svg#main-in-icon"></use>
-                    </svg>
-                  </button>
-                </li>
-              </ul>
-            </div>
-          </li>
+            <li class="team-item">
+              <div class="team-thumb">
+                <img src="./images/member02.jpg" alt="Frontend Developer" />
+              </div>
+              <div class="team-content">
+                <h3 class="team-member">Ольга Репина</h3>
+                <p class="team-profession">Frontend Developer</p>
+                <ul class="social">
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use href="./images/svg/sprite.svg#main-ig-icon"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use
+                          href="./images/svg/sprite.svg#main-twitter-icon"
+                        ></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use href="./images/svg/sprite.svg#main-fb-icon"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use href="./images/svg/sprite.svg#main-in-icon"></use>
+                      </svg>
+                    </button>
+                  </li>
+                </ul>
+              </div>
+            </li>
 
-          <li class="team-item">
-            <div class="team-thumb">
-              <img src="./images/member03.jpg" alt="Marketing" width="270" />
-            </div>
-            <div class="team-content">
-              <h3 class="team-member">Николай Тарасов</h3>
-              <p class="team-profession">Marketing</p>
-              <ul class="social">
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use href="./images/svg/sprite.svg#main-ig-icon"></use>
-                    </svg>
-                  </button>
-                </li>
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use
-                        href="./images/svg/sprite.svg#main-twitter-icon"
-                      ></use>
-                    </svg>
-                  </button>
-                </li>
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use href="./images/svg/sprite.svg#main-fb-icon"></use>
-                    </svg>
-                  </button>
-                </li>
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use href="./images/svg/sprite.svg#main-in-icon"></use>
-                    </svg>
-                  </button>
-                </li>
-              </ul>
-            </div>
-          </li>
+            <li class="team-item">
+              <div class="team-thumb">
+                <img src="./images/member03.jpg" alt="Marketing" />
+              </div>
+              <div class="team-content">
+                <h3 class="team-member">Николай Тарасов</h3>
+                <p class="team-profession">Marketing</p>
+                <ul class="social">
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use href="./images/svg/sprite.svg#main-ig-icon"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use
+                          href="./images/svg/sprite.svg#main-twitter-icon"
+                        ></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use href="./images/svg/sprite.svg#main-fb-icon"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use href="./images/svg/sprite.svg#main-in-icon"></use>
+                      </svg>
+                    </button>
+                  </li>
+                </ul>
+              </div>
+            </li>
 
-          <li class="team-item">
-            <div class="team-thumb">
-              <img src="./images/member04.jpg" alt="UI Designer" width="270" />
-            </div>
-            <div class="team-content">
-              <h3 class="team-member">Михаил Ермаков</h3>
-              <p class="team-profession">UI Designer</p>
-              <ul class="social">
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use href="./images/svg/sprite.svg#main-ig-icon"></use>
-                    </svg>
-                  </button>
-                </li>
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use
-                        href="./images/svg/sprite.svg#main-twitter-icon"
-                      ></use>
-                    </svg>
-                  </button>
-                </li>
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use href="./images/svg/sprite.svg#main-fb-icon"></use>
-                    </svg>
-                  </button>
-                </li>
-                <li>
-                  <button class="social-button">
-                    <svg class="button-icon" width="44" height="44">
-                      <use href="./images/svg/sprite.svg#main-in-icon"></use>
-                    </svg>
-                  </button>
-                </li>
-              </ul>
-            </div>
-          </li>
-        </ul>
+            <li class="team-item">
+              <div class="team-thumb">
+                <img src="./images/member04.jpg" alt="UI Designer" />
+              </div>
+              <div class="team-content">
+                <h3 class="team-member">Михаил Ермаков</h3>
+                <p class="team-profession">UI Designer</p>
+                <ul class="social">
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use href="./images/svg/sprite.svg#main-ig-icon"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use
+                          href="./images/svg/sprite.svg#main-twitter-icon"
+                        ></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use href="./images/svg/sprite.svg#main-fb-icon"></use>
+                      </svg>
+                    </button>
+                  </li>
+                  <li>
+                    <button class="social-button">
+                      <svg class="button-icon" width="44" height="44">
+                        <use href="./images/svg/sprite.svg#main-in-icon"></use>
+                      </svg>
+                    </button>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="container clients-section">
         <h2 class="clients-title">Постоянные клиенты</h2>
