--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
           <span>Заказать услугу</span>
         </button>
       </section>
-      <div class="container studio-container">
+      <section class="section-studio container">
         <!--/* Особенности */-->
-        <section class="features-section">
+        <div class="features-container">
           <h2 class="visually-hidden">Особенности</h2>
           <ul class="features-content">
             <li>
@@ -115,9 +115,9 @@
               </p>
             </li>
           </ul>
-        </section>
+        </div>
         <!--/* Чем мы занимаемся */-->
-        <section class="work-section">
+        <div class="work-container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="work-content">
             <li class="work-item">
@@ -139,8 +139,8 @@
               </div>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
       <!--/* Наша команда */-->
       <section class="team-section">
         <div class="container team">
