--- a/portfolio.html
+++ b/portfolio.html
@@ -54,8 +54,8 @@
     </header>
 
     <main>
-      <div class="container">
-        <section class="section-portfolio">
+      <section class="section-portfolio container">
+        <div class="container-portfolio">
           <h1 class="visually-hidden">Наши проэкты</h1>
           <!-- кнопки -->
           <ul class="filters">
@@ -188,8 +188,8 @@
               </div>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <footer>
       <!--/* Подвал */-->
@@ -266,6 +266,6 @@
         >
       </div>
     </footer>
-    <script src="./script/modal.js"></script>
+    <!-- <script src="./script/modal.js"></script> -->
   </body>
 </html>
